--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,12 @@
   "private": true,
   "ignore": [
     "**/.*",
-"node_modules",
-"bower_components",
-"test",
-"tests"
-  ]
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "dojo": "~1.9.1"
+  }
 }
