--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-regarde": "~0.1.1",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
