--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-regarde": "~0.1.1",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "intern": "~1.2.1"
   }
 }
